# mor

./: CMakeLists.txt
example/: CMakeLists.txt  convert_map.h  exemple.cpp
mor/: attribute.h  descfield.h  entity.cpp  entity.h  field.cpp  field.h  ientity.h  ifield.h  mor.cpp  mor.h  reference.h
src/: entity.cpp  entity.h  field.cpp  field.h  mor.cpp  mor.h
